can load all questions, can rightly show right and wrong and automaticly jump to next question, fixed some css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ header {
     padding: 20px;
     display: flex;
     justify-content: center;
+    font-size: 25px; 
+    font-style: italic; 
+    color: rgba(128, 128, 128, 1); 
+    letter-spacing: 1px;
 }
 
 .btn {
@@ -74,4 +78,8 @@ header {
     padding: 5px;
     margin: 10px;
     cursor: pointer;
+}
+
+.btn:hover {
+    background-color: rgb(212, 16, 252);
 }
